--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                 </ul>
             <li>學業成就及活動參與</li>
                 <ol>
+                    <li>專業能力</li>
+                        <ul>
+                            <li>程式語言：C, Swift, Java, Python, html, CSS</li>
+                            <li>領域：iOS APP, Azure</li>
+                            <li>系統：MacOS, Windows, Linux</li>
+                        </ul>
                     <li>專題題目</li>
                         <ul>
                             
@@ -37,13 +43,13 @@
                     <li>參賽經驗</li>
                         <ul>
                             <li>專題組獲得科技部109年度大專學生專題研究計畫</li>
+                            <li>第25屆大專校院資訊應用服務創新競賽 產學合作組 第三名</li>
+                            <li>第25屆大專校院資訊應用服務創新競賽 臺北生活好便利創新應用 佳作</li>
+                            <li>2020城市盃電商小老闆全國大專暨高中職電子商務創新創意專題競賽<br>行動商務組第一名</li>
                             <li>入圍2020APP移動應用創新賽入圍決賽</li>
                             <li>淡江大學 2020創新創業競賽 榮獲佳作獎</li>
                             <li>淡江大學 資訊管理學系109學年度 專題製作決賽 榮獲佳作</li>
                             <li>2020TKU iOS APP 創新賽　第三名</li>
-                            <li>2020城市盃電商小老闆全國大專暨高中職電子商務創新創意專題競賽<br>行動商務組第一名</li>
-                            <li>第25屆大專校院資訊應用服務創新競賽 產學合作組 第三名</li>
-                            <li>第25屆大專校院資訊應用服務創新競賽 臺北生活好便利創新應用 佳作</li>
                         </ul>
                     <li>社團參與</li>
                         <ul>
