--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
                         <ul>
                             <li>多益TOEIC成績：765</li>
                             <li>TQC+ Python網頁擷取及資料分析認證</li>
+                            <li>TQC Excel 2016 認證</li>
                         </ul>
                     <li>工作經歷</li>
                         <ul>
                             <li>猿創力程式設計學校_壞主意有限公司 講師</li>
-                            <li>微星科技股份有限公司 臺北服務中心 客服人員</li>
+                            <li>微星科技股份有限公司 臺北服務中心 維修助理</li>
                         </ul>
                     <li>社團參與</li>
                         <ul>
