--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 </ul>
             <li>學歷</li>
                 <ul>
-                    <li>碩士：國立臺北科技大學_資訊與財金管理系</li>
-                    <li>大學：淡江大學_資訊管理學系</li>
+                    <li>碩士：國立臺北科技大學 資訊與財金管理系</li>
+                    <li>大學：淡江大學 資訊管理學系</li>
                 </ul>
             <li>學業成就及活動參與</li>
                 <ol>
