--- a/chineseVer.html
+++ b/chineseVer.html
@@ -13,9 +13,8 @@
     <div class="bar">
         <div>
             <ul>
-                <li><a href="https://hkwprince.github.io/chineseVer.html">繁體中文</a></li>
                 <li><a href="https://github.com/HKWPrince/Face8uy">Github</a></li>
-                <li><a href="https://www.youtube.com/watch?v=6NWdsfnuOi0&t=43s">Project</a></li>
+                <li><a href="https://www.youtube.com/watch?v=6NWdsfnuOi0&t=43s">專題影片</a></li>
                 <li style="float: left;">Prince</li>
             </ul>
         </div>  
@@ -25,33 +24,34 @@
         <picture>
             <source class="big_screen-device" media="(min-width: 650px)" srcset="img.jpg">
             <source class="small_screen-device" media="(min-width: 465px)" srcset="img.jpg">
-            <img class="mypic" src="img.jpg" alt="Personal Image">
+            <img class="mypic" src="img.jpg" alt="個人照片">
         </picture>
         </div>
     <div class="article">
         <ol type="I">
-            <li>Profile</li>
+            <li>個人資訊</li>
                 <ul>
-                    <li>Name：HUANG, KUO WEI</li>
+                    <li>姓名：HUANG, KUO WEI</li>
                     <li>Email：prince880211@gmail.com</li>
                 </ul>
-            <li>Educational Background</li>
+            <li>學歷</li>
                 <ul>
-                    <li>Bachelor：National Taipei University of Technology Department of Information and Finance Managemen</li>
-                    <li>Master：Tamkang University Information Management</li>
+                    <li>碩士：國立臺北科技大學 資訊與財金管理系</li>
+                    <li>大學：淡江大學 資訊管理學系</li>
                 </ul>
-            <li>Academic Achievement and Activities Participation</li>
+            <li>學業成就及活動參與</li>
                 <ol>
-                    <li>Skill</li>
+                    <li>專業能力</li>
                         <ul>
                             <li>程式語言：C, Swift, Java, Python, html, CSS</li>
-                            <li>System Development：MacOS, Windows, Linux, iOS APP, Azure, github</li>
+                            <li>領域：iOS APP, Azure</li>
+                            <li>系統：MacOS, Windows, Linux</li>
                         </ul>
-                    <li>Project</li>
+                    <li>專題題目</li>
                         <ul>
                             <li>臉部辨識應用於商場e化與人流分析系統_Face8uy(<a href="https://money.udn.com/money/story/10860/5004146">新聞</a>)</li>
                         </ul>
-                    <li>Awards</li>
+                    <li>參賽經驗</li>
                         <ul>
                             <li>專題組獲得科技部109年度大專學生專題研究計畫</li>
                             <li>第25屆大專校院資訊應用服務創新競賽 產學合作組 第三名</li>
@@ -62,25 +62,23 @@
                             <li>淡江大學 資訊管理學系109學年度 專題製作決賽 榮獲佳作</li>
                             <li>2020TKU iOS APP 創新賽　第三名</li>
                         </ul>
-                    <li>Certification</li>
+                    <li>專業證照</li>
                         <ul>
-                            <li>TOEIC：765</li>
+                            <li>多益TOEIC成績：765</li>
                             <li>TQC+ Python網頁擷取及資料分析認證</li>
                             <li>TQC Excel 2016 認證</li>
                         </ul>
-                    <li>Job Experience</li>
+                    <li>工作經歷</li>
                         <ul>
-                            <li>DBS Bank Intern</li>
-                            <li>KubeTech_Academy Co-founder
-                            <li>MSI Technologies 臺北服務中心 Maintenance assistant</li>
-                            <li>猿創力程式設計學校_壞主意有限公司 Lecturer</li>
-                            
+                            <li>KubeTech_Academy 聯合創辦人
+                            <li>猿創力程式設計學校_壞主意有限公司 講師</li>
+                            <li>微星科技股份有限公司 臺北服務中心 維修助理</li>
                         </ul>
-                    <li>Activities</li>
+                    <li>社團參與</li>
                         <ul>
                             <li>淡江大學資訊管理學系 第34屆活動長</li>
-                            <li>2019資管系迎新宿營 CEO</li>
-                            <li>2019資管系校外服務隊 CEO</li>
+                            <li>2019資管系迎新宿營執行長</li>
+                            <li>2019資管系校外服務隊隊長</li>
                         </ul>    
                 </ol>
         </ol>
