--- a/chineseVer.html
+++ b/chineseVer.html
@@ -70,9 +70,10 @@
                         </ul>
                     <li>工作經歷</li>
                         <ul>
-                            <li>KubeTech_Academy 聯合創辦人
-                            <li>猿創力程式設計學校_壞主意有限公司 講師</li>
+                            <li>星展銀行 實習生</li>
+                            <li>KubeTech_Academy 聯合創辦人</li>
                             <li>微星科技股份有限公司 臺北服務中心 維修助理</li>
+                            <li>猿創力程式設計學校_壞主意有限公司 講師</li>
                         </ul>
                     <li>社團參與</li>
                         <ul>
