--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <ol>
                     <li>Skill</li>
                         <ul>
-                            <li>程式語言：C, Swift, Java, Python, html, CSS</li>
+                            <li>Programming Language：C, Swift, Java, Python, html, CSS</li>
                             <li>System Development：MacOS, Windows, Linux, iOS APP, Azure, github</li>
                         </ul>
                     <li>Project</li>
