--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <form id="contactForm" action="https://webapi-850000115209.northamerica-northeast1.run.app"
+                    <form id="contactForm" action="https://contactapi-850000115209.northamerica-northeast1.run.app"
                         method="post">
                         <div class="form-group">
                             <label for="name">Name <span class="text-danger">*</span></label>
