--- a/contact.html
+++ b/contact.html
@@ -136,8 +136,9 @@
                             <textarea class="form-control" id="message" name="message" rows="5" placeholder="Leave your message here"></textarea>
                         </div>
                         <button type="submit" class="btn btn-success mt-3">Send Message</button>
-                        <input type="hidden" class="form-control" id="address" name="address" value="https://jiangjiangjiangseana.github.io" >
-                        <input type="hidden" class="form-control" id="mailTo" name="mailTo" value="prince880211@gmail.com">
+
+                        <input type="hidden" class="form-control" id="address" name="address" value="https://hkwprince.github.io" >
+                        <input type="hidden" class="form-control" id="mailTo" name="mailTo" value="@gmail.com">
                     </form>
                 </div>
             </div>
