--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
                         <button type="submit" class="btn btn-success mt-3">Send Message</button>
 
                         <input type="hidden" class="form-control" id="address" name="address" value="https://hkwprince.github.io" >
-                        <input type="hidden" class="form-control" id="mailTo" name="mailTo" value="@gmail.com">
+                        <input type="hidden" class="form-control" id="mailTo" name="mailTo" value="prince880211@gmail.com">
                     </form>
                 </div>
             </div>
