--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="YoshiLin">
-    <title>Contact - Yoshi Lin</title>
+    <meta name="author" content="JaclynChiang">
+    <title>Contact - Lucas Chang</title>
 
     <style>
         @keyframes hidePreloader {
@@ -37,7 +37,7 @@
         });
     </script>
 
-    <link rel="icon" href="assets/img/brand/y.png" type="image/png">
+    <link rel="icon" href="assets/img/brand/logo_tree.png" type="image/png">
     <link rel="stylesheet" href="assets/libs/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="assets/css/quick-website.css" id="stylesheet">
 </head>
@@ -53,17 +53,17 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img alt="Logo" src="assets/img/brand/y.png" id="navbar-logo">
+                <img alt="Logo" src="assets/img/brand/logo_tree.png" id="navbar-logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto mt-4 mt-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Life of me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">My Life</a></li>
                     <li class="nav-item"><a class="nav-link" href="projects.html">Professional Skills of me</a></li>
                 </ul>
-                <a class="navbar-btn btn btn-sm badge-soft-success d-none d-lg-inline-block ml-3" href="contact.html">Contact Me !</a>
+                <a class="navbar-btn btn btn-sm badge-soft-success d-none d-lg-inline-block ml-3" href="contact.html">Contact Me</a>
                 <div class="d-lg-none text-center mt-2">
                     <a href="contact.html" class="btn btn-block btn-sm btn-warning">Contact Me !</a>
                 </div>
@@ -76,31 +76,32 @@
             <div class="row justify-content-center mb-5 text-center">
                 <div class="col-lg-8">
                     <h2>Contact Me</h2>
-                    <p class="lead lh-180 mt-3">Feel free to leave your message, I will get back to you as soon as possible. :L</p>
+                    <p class="lead lh-180 mt-3">Feel free to leave your message, I will get back to you as soon as possible. :)</p>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <form id="contactForm" method="post" action="https://contactapi-850000115209.northamerica-northeast1.run.app">
+                    <form id="contactForm" method = "post" action = "https://contactapi-850000115209.northamerica-northeast1.run.app">
                         <div class="form-group">
                             <label for="name">Name <span class="text-danger">*</span></label>
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Your name" required>
+                            <input type="text" class="form-control" id="name" name = "name" placeholder="Your name" required>
                         </div>
                         <div class="form-group">
                             <label for="email">Email <span class="text-danger">*</span></label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="your@email.com" required>
+                            <input type="email" class="form-control" id="email" name = "email" placeholder="your@email.com" required>
                         </div>
                         <div class="form-group">
                             <label for="phone">Phone Number</label>
-                            <input type="tel" class="form-control" id="phone" name="phone" placeholder="e.g. +886-912-345-678">
+                            <input type="tel" class="form-control" id="phone" name = "phone" placeholder="e.g. +886-912-345-678">
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea class="form-control" id="message" name="message" rows="5" placeholder="Leave your message here"></textarea>
+                            <textarea class="form-control" id="message" name = "message" rows="5" placeholder="Leave your message here"></textarea>
                         </div>
                         <button type="submit" class="btn btn-success mt-3">Send Message</button>
-                        <input type="hidden" class="form-control" id="address" name="address" value="https://github.com/yoshilinMC/">
-                        <input type="hidden" class="form-control" id="mailTo" name="mailTo" value="yoshilin3.4@gmail.com">
+
+                        <input type = "hidden" class = "form-control" id = "address" name = "address" value = "https://Lucas0932.github.io">
+                        <input type = "hidden" class = "form-control" id = "mailTo" name = "mailTo" value = "LucasChang1112@gmail.com">
                     </form>
                 </div>
             </div>
