--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,25 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="JaclynChiang">
-    <title>Contact - Lucas Chang</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Prince Huang's Personal Page</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
 
     <style>
         @keyframes hidePreloader {
-            0% { width: 100%; height: 100%; }
-            100% { width: 0; height: 0; }
+            0% {
+                width: 100%;
+                height: 100%;
+            }
+
+            100% {
+                width: 0;
+                height: 0;
+            }
         }
-        body > div.preloader {
+
+        body>div.preloader {
             position: fixed;
             background: white;
             width: 100%;
@@ -27,19 +35,46 @@
             align-items: center;
             justify-content: center;
         }
-        body:not(.loaded) > div.preloader { opacity: 1; }
-        body:not(.loaded) { overflow: hidden; }
-        body.loaded > div.preloader { animation: hidePreloader .5s linear .5s forwards; }
+
+        body:not(.loaded)>div.preloader {
+            opacity: 1;
+        }
+
+        body:not(.loaded) {
+            overflow: hidden;
+        }
+
+        body.loaded>div.preloader {
+            animation: hidePreloader .5s linear .5s forwards;
+        }
     </style>
     <script>
-        window.addEventListener("load", function() {
+        window.addEventListener("load", function () {
             setTimeout(() => { document.body.classList.add('loaded'); }, 300);
         });
     </script>
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Font Awesome -->
+    <!-- <script src="https://kit.fontawesome.com/5cf713e6ad.js" crossorigin="anonymous"></script> -->
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/font-awesome.min.css">
 
-    <link rel="icon" href="assets/img/brand/logo_tree.png" type="image/png">
-    <link rel="stylesheet" href="assets/libs/@fortawesome/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/quick-website.css" id="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+    <!-- Main CSS File -->
+    <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -53,17 +88,18 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img alt="Logo" src="assets/img/brand/logo_tree.png" id="navbar-logo">
+                <img alt="Logo" src="assets/img/favicon.png" id="navbar-logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto mt-4 mt-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html">My Life</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Life of me</a></li>
                     <li class="nav-item"><a class="nav-link" href="projects.html">Professional Skills of me</a></li>
                 </ul>
-                <a class="navbar-btn btn btn-sm badge-soft-success d-none d-lg-inline-block ml-3" href="contact.html">Contact Me</a>
+                <a class="navbar-btn btn btn-sm badge-soft-success d-none d-lg-inline-block ml-3"
+                    href="contact.html">Contact Me !</a>
                 <div class="d-lg-none text-center mt-2">
                     <a href="contact.html" class="btn btn-block btn-sm btn-warning">Contact Me !</a>
                 </div>
@@ -76,32 +112,33 @@
             <div class="row justify-content-center mb-5 text-center">
                 <div class="col-lg-8">
                     <h2>Contact Me</h2>
-                    <p class="lead lh-180 mt-3">Feel free to leave your message, I will get back to you as soon as possible. :)</p>
+                    <p class="lead lh-180 mt-3">Feel free to leave your message, I will get back to you as soon as
+                        possible. :)</p>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <form id="contactForm" method = "post" action = "https://contactapi-850000115209.northamerica-northeast1.run.app">
+                    <form id="contactForm" action="https://contactapi-850000115209.northamerica-northeast1.run.app" method="post">
                         <div class="form-group">
                             <label for="name">Name <span class="text-danger">*</span></label>
-                            <input type="text" class="form-control" id="name" name = "name" placeholder="Your name" required>
+                            <input type="text" class="form-control" id="name" name="name"placeholder="Your name" required>
                         </div>
                         <div class="form-group">
                             <label for="email">Email <span class="text-danger">*</span></label>
-                            <input type="email" class="form-control" id="email" name = "email" placeholder="your@email.com" required>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="your@email.com" required>
                         </div>
                         <div class="form-group">
                             <label for="phone">Phone Number</label>
-                            <input type="tel" class="form-control" id="phone" name = "phone" placeholder="e.g. +886-912-345-678">
+                            <input type="tel" class="form-control" id="phone" name="phone" placeholder="e.g. +886-912-345-678">
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea class="form-control" id="message" name = "message" rows="5" placeholder="Leave your message here"></textarea>
+                            <textarea class="form-control" id="message" name="message" rows="5" placeholder="Leave your message here"></textarea>
                         </div>
                         <button type="submit" class="btn btn-success mt-3">Send Message</button>
 
-                        <input type = "hidden" class = "form-control" id = "address" name = "address" value = "https://Lucas0932.github.io">
-                        <input type = "hidden" class = "form-control" id = "mailTo" name = "mailTo" value = "LucasChang1112@gmail.com">
+                        <input type="hidden" class="form-control" id="address" name="address" value="https://hkwprince.github.io" >
+                        <input type="hidden" class="form-control" id="mailTo" name="mailTo" value="prince880211@gmail.com">
                     </form>
                 </div>
             </div>
@@ -111,7 +148,8 @@
     <footer class="position-relative" id="footer-main">
         <div class="footer pt-lg-7 bg-light">
             <div class="shape-container shape-line shape-position-top shape-orientation-inverse bg-light">
-                <svg width="2560px" height="100px" viewBox="0 0 2560 100" preserveAspectRatio="none" class="fill-section-secondary">
+                <svg width="2560px" height="100px" viewBox="0 0 2560 100" preserveAspectRatio="none"
+                    class="fill-section-secondary">
                     <polygon points="2560 0 2560 100 0 100"></polygon>
                 </svg>
             </div>
@@ -128,8 +166,8 @@
     <script>
         feather.replace({ width: '1em', height: '1em' });
 
-        document.getElementById('contactForm').addEventListener('submit', function(event) {
-            // event.preventDefault();  // 防止表單真的提交
+        document.getElementById('contactForm').addEventListener('submit', function (event) {
+            //event.preventDefault();  // 防止表單真的提交
 
             const name = document.getElementById('name').value.trim();
             const email = document.getElementById('email').value.trim();
@@ -143,4 +181,5 @@
         });
     </script>
 </body>
+
 </html>
