--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img alt="Logo" src="assets/img/favicon.png" id="navbar-logo">
+                <i class="bi bi-p-circle-fill"></i>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
