--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords">
     
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="logo_tree.png" rel="icon">
+    <link href="logo_tree.png" rel="apple-touch-icon">
     <!-- Font Awesome -->
     <!-- <script src="https://kit.fontawesome.com/5cf713e6ad.js" crossorigin="anonymous"></script> -->
     <!-- Fonts -->
